# ML_BinaryClassification

./: .gitignore  README.md  config.py  evaluation.py  main.py  pipeline.py  pyproject.toml  test.py  train_model.py
algorithms/decisiontree/: decisiontree.py  node.py
algorithms/k_nearest_neighbors/: knn.py
algorithms/logistic_regression/: logistic_regression.py
data/: link.md
data/clean_data/: breast_cancer_clean.csv
data/test/: test.json
logger/: log.py
preprocessing/: feature_selection.py
utils/: log.py  pickle_helper.py
