[tool.poetry]
name = "BinaryClassificationML"
version = "0.1.0"
description = "Implementation of some machine learning algorithm for binary classification."
authors = ["Myssal"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
pandas = "^2.3.3"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"
plotly = "^6.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
